apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@circuit_breaker.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.circuit_breaker
  data:
    datapoints:
      - value: 1
        attributes:
          opt.connector.all: true
          opt.connector.sources: false
          opt.subgraph.all: true
          opt.subgraph.subgraphs: true
