apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@connector_limits.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.connector_limits
  data:
    datapoints:
      - value: 1
        attributes:
          opt.http_max_response_size: 5MiB
          opt.max_mapping_errors: 100
          opt.sources: true
