apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@connectors.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.connectors
  data:
    datapoints:
      - value: 1
        attributes:
          opt.debug_extensions: true
          opt.expose_sources_in_context: true
          opt.max_requests_per_operation_per_source: true
          opt.preview_connect_v0_5: true
          opt.source.config: true
          opt.source.max_requests_per_operation: true
          opt.source.override_url: true
