apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@demand_control.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.non_zero()"
---
- name: apollo.router.config.experimental_demand_control
  data:
    datapoints:
      - value: 1
        attributes:
          opt.mode: measure
          opt.strategy: static_estimated
